<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardBackgroundColor="@color/colorCardBackground"
    card_view:cardCornerRadius="@dimen/padding_8dp"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        style="@style/SubTitle_LinearLayout_Child"
        android:background="@drawable/ripple_effect_button">

        <LinearLayout style="@style/LinearLayout_Main_Child">

            <ImageView
                android:id="@+id/product_image"
                style="@style/ImageView_style"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                tools:ignore="ContentDescription" />

            <LinearLayout
                style="@style/SubTitle_LinearLayout_Child"
                android:paddingLeft="@dimen/padding_16dp"
                android:paddingStart="@dimen/padding_16dp"
                android:paddingTop="@dimen/padding_8dp"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:id="@+id/product_name"
                    style="@style/MainTitle_textview"
                    tools:text="@string/product_name_demo_display" />

                <LinearLayout
                    style="@style/linear_layout_content_childs"
                    android:paddingBottom="@dimen/padding_8dp">

                    <TextView
                        style="@style/MainTitle_textview"
                        android:text="@string/rupees" />

                    <TextView
                        android:id="@+id/product_price"
                        style="@style/MainTitle_textview"
                        tools:text="@string/product_cost_demo_display" />

                </LinearLayout>

                <LinearLayout style="@style/LinearLayout_Main_Child">

                    <TextView
                        android:id="@+id/product_stock"
                        style="@style/stock_in_out_left_textview"
                        tools:text="@string/in_stock" />

                    <TextView
                        android:id="@+id/product_stock_value_current"
                        style="@style/Stock_Circle_Background"
                        android:text="@string/twenty_five_stock" />

                    <TextView
                        style="@style/stock_in_out_left_textview"
                        android:text="@string/left" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            style="@style/SubTitle_LinearLayout_Child"
            android:background="@color/colorWhite">

            <TextView
                style="@style/Content_description_main"
                android:text="@string/product_description" />

            <LinearLayout style="@style/linear_layout_content_childs">

                <ImageView
                    style="@style/imageview_content_childs"
                    android:src="@drawable/ic_star_black_24dp"
                    tools:ignore="ContentDescription" />

                <TextView
                    style="@style/content_description_content_textview"
                    android:text="@string/customer_review" />

                <TextView
                    android:id="@+id/product_quality"
                    style="@style/content_description_content_textview_edited"
                    tools:text="@string/good" />

            </LinearLayout>

            <LinearLayout style="@style/linear_layout_content_childs">

                <ImageView
                    style="@style/imageview_content_childs"
                    android:src="@drawable/ic_sale_data"
                    tools:ignore="ContentDescription" />

                <TextView
                    style="@style/content_description_content_textview"
                    android:text="@string/sale_data" />

                <TextView
                    android:id="@+id/product_sale_data"
                    style="@style/content_description_content_textview_edited"
                    tools:text="@string/profit" />

            </LinearLayout>

            <LinearLayout style="@style/linear_layout_content_childs">

                <ImageView
                    style="@style/imageview_content_childs"
                    android:src="@drawable/ic_category"
                    tools:ignore="ContentDescription" />

                <TextView
                    style="@style/content_description_content_textview"
                    android:text="@string/category" />

                <TextView
                    android:id="@+id/product_category"
                    style="@style/content_description_content_textview_edited"
                    tools:text="@string/electronics" />

            </LinearLayout>

            <LinearLayout
                style="@style/linear_layout_content_childs"
                android:paddingBottom="@dimen/padding_8dp">

                <ImageView
                    style="@style/imageview_content_childs"
                    android:src="@drawable/ic_supplier"
                    tools:ignore="ContentDescription" />

                <TextView
                    style="@style/content_description_content_textview"
                    android:text="@string/supplier" />

                <TextView
                    android:id="@+id/product_supplier"
                    style="@style/content_description_content_textview_edited"
                    tools:text="@string/cloud_tail" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            style="@style/LinearLayout_Main_Child"
            android:background="@color/colorWhite"
            android:paddingLeft="@dimen/padding_4dp"
            android:paddingStart="@dimen/padding_4dp"
            android:paddingTop="@dimen/padding_8dp"
            tools:ignore="RtlSymmetry">

            <ImageView
                style="@style/imageview_share_sale_icon"
                android:onClick="shareProduct"
                android:src="@drawable/ic_share_black_24dp"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/sell_on_click"
                style="@style/imageview_share_sale_icon"
                android:src="@drawable/ic_if_buy_2639786"
                tools:ignore="ContentDescription" />

            <LinearLayout
                style="@style/offer_background_texview"
                tools:targetApi="lollipop">

                <LinearLayout style="@style/offer_background_parent">

                    <TextView
                        android:id="@+id/product_offer"
                        style="@style/offer_texview"
                        tools:text="@string/fifteen" />

                    <TextView
                        style="@style/offer_texview"
                        android:text="@string/percentage_symbol" />

                </LinearLayout>

                <TextView
                    style="@style/offer_texview"
                    android:text="@string/offer" />

            </LinearLayout>


            <Button
                style="@style/button_style"
                android:background="@drawable/ripple_effect_button"
                android:onClick="orderMore"
                android:text="@string/order_more_button" />

            <!--<ImageView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:focusable="false"-->
                <!--android:padding="8dp"-->
                <!--android:background="@drawable/ripple_effect_button"-->
                <!--android:layout_gravity="center"-->
                <!--android:onClick="del"-->
                <!--android:src="@drawable/ic_delete_black_36dp"-->
                <!--tools:ignore="ContentDescription" />-->

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>